kubernetes/apps/default/audiobookshelf/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  labels: &labels
    app.kubernetes.io/part-of: audiobookshelf
    app.kubernetes.io/name: audiobookshelf
    app.kubernetes.io/component: server
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      volumes:
        - name: media
          hostPath:
            path: /mnt/storage/media
            type: Directory
        - name: config
          persistentVolumeClaim:
            claimName: audiobookshelf-config
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: media
              mountPath: /audiobooks
              subPath: audiobooks
            - name: media
              mountPath: /podcasts
              subPath: podcasts
            - name: config
              mountPath: /config
              subPath: config
            - name: config
              mountPath: /metadata
              subPath: metadata
