kubernetes/apps/default/audiobookshelf/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  labels:
    app.kubernetes.io/part-of: audiobookshelf
    app.kubernetes.io/name: audiobookshelf
    app.kubernetes.io/component: server
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/part-of: audiobookshelf
    app.kubernetes.io/name: audiobookshelf
    app.kubernetes.io/component: server
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
