kubernetes/apps/default/audiobookshelf/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt'
    kubernetes.io/ingress.class: 'traefik'
spec:
  rules:
    - host: audiobookshelf.fadhlika.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf
                port:
                  name: http
  tls:
    - secretName: audiobookshelf-tls
      hosts:
        - audiobookshelf.fadhlika.com
